[gd_scene load_steps=6 format=3 uid="uid://test_stage_001"]

[ext_resource type="Script" path="res://scripts/systems/stage_base.gd" id="1_stage_base"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ground"]
size = Vector3(20, 1, 100)

[sub_resource type="BoxMesh" id="BoxMesh_ground"]
size = Vector3(20, 1, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ground"]
albedo_color = Color(0.3, 0.5, 0.3, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_gate"]
size = Vector3(6, 4, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_fall"]
size = Vector3(200, 1, 200)

[node name="TestStage" type="Node3D"]
script = ExtResource("1_stage_base")
stage_number = 1
time_limit = 60.0

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 45)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_ground")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_ground")
surface_material_override/0 = SubResource("StandardMaterial3D_ground")

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="StartGate" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 2)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StartGate"]
shape = SubResource("BoxShape3D_gate")

[node name="FinishGate" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 90)

[node name="CollisionShape3D" type="CollisionShape3D" parent="FinishGate"]
shape = SubResource("BoxShape3D_gate")

[node name="FallPlane" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -20, 45)

[node name="CollisionShape3D" type="CollisionShape3D" parent="FallPlane"]
shape = SubResource("BoxShape3D_fall")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 10, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="FinishVisual" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 90)

[node name="StartVisual" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 2)
